<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/viewRecipeName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:padding="3dp"
        android:text="@string/hello123"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/new1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/method" />

            <TextView
                android:id="@+id/viewMethod"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/hello123" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/new2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/mealtype" />

            <TextView
                android:id="@+id/viewMealType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/hello123" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/new3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/viewDuration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/hello123" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/new4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/timeofyear" />

            <TextView
                android:id="@+id/viewTimeOfYear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/hello123" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/new5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/region" />

            <TextView
                android:id="@+id/viewRegion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/hello123" />
        </TableRow>
    </TableLayout>
    
    <TextView
    	android:id="@+id/new6"
    	android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content"
   	 	android:padding="3dp"
   	 	android:text="@string/hello123" />
    
    <Button
        android:id="@+id/ShareToFacebook"
        android:background="@drawable/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/bookmark"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:text="Bookmark" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>